[workspace]

members = [
    "fibonacci",
    "spawning",
    "communicating-with-tasks",
    "processing-inbound-sockets",
    "background-processing",
    "coordinating-access-to-a-resource",
    "an-example-server",
    "working-with-i-o-futures",
    "transports",
    "reading-data-with-asyncread",
    "a-more-complicated-future",
    "tasks",
    "task-notification",
    "polling-model",
    "using-the-future-api",
    "using-the-poll-api",
    "line-chat",
    "running-code-after-a-period-of-time",
    "timing-out-a-long-running-operation",
    "running-code-on-an-interval",
    "working-with-framed-streams",
]
